# Copyright © 2019 Alastair Feille
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
[package]
name = "mutos"
version = "0.1.0"
description = "A microkernel"

homepage = "https://mutos.org"
repository = "https://github.com/mutoso/mutos"

authors = ["Alastair Feille <me@alastair.se>"]

license = "MPL-2.0"
readme = "README.md"

edition = "2018"

[dependencies]
bootloader = "0.6.0"
volatile = "0.2.3"
spin = "0.4.9"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
default-target = "x86_64-mutos.json"
